    + Ignore some error-handling code when computing the test coverage.
  * debsign:
    + Fix incomplete .buildinfo entry when an at ('@') sign is in the path.

  [ Chris Lamb ]
  * PEP8-ify a number of Python scripts.  MR: !27

  [ Xavier Guimard ]
  * uscan:
    + Rewrite using object-oriented code.  MR: !28
      - This adds a new dependency on libmoo-perl for uscan (Recommended).

 -- Mattia Rizzolo <mattia@debian.org>  Mon, 03 Sep 2018 22:42:37 +0200

devscripts (2.18.4) unstable; urgency=medium

  [ Mattia Rizzolo ]
  * debchange:
    + Replace implicit boolean evaluation of a Dpkg::Version object by
      Dpkg::Version::is_valid().  Closes: #900703
  * bts:
    + Add the new 'ftbfs' tag to the list of known tags.  Closes: #900963
  * grep-excuses:
    + Avoid unintended blessing during YAML loading.
      Thanks to Ansgar Burchardt <ansgar@debian.org> for reporting and
      providing a patch.  Closes: #902409; CVE-2018-13043
  * uscan:
    + Remove wrong information about GitHub releases.  Closes: #902842
  * test/test_uscan_ftp:
    + Skip test on hurd-i386, hurd is missing a required feature.  MR: !23
  * test/pylint:
    + Temporarily disable the test, as pylist is currently uninstallable,
      see #902631.
  * debian/control:
    + Comment-out build-dependency on pylint3.
    + Bump Standards-Version to 4.2.1, no changes needed.

  [ Shengjing Zhu ]
  * uscan:
    + Fix wrong git log command in manpage.  MR:!16

  [ Simon McVittie ]
  * tests/test_package_lifecycle:
    + Don't load ~/.devscripts while calling debdiff.  MR: !17
  * sadt:
    + Implement new restrictions from autopkgtest git master.  MR: !18
      - 'flaky': if this test fails, the failure is logged but is not
        counted as a failure.
      - 'skippable': if this test exits 77, it counts as skipped,
        not failed (even if it wrote to stderr).
  * uscan:
    + Handle absolute USCAN_DESTDIR correctly in git mode.
      Closes: #895279; MR: !14

  [ Sean Whitton ]