@@ -27,6 +27,8 @@ devscripts (2.18.5) UNRELEASED; urgency=medium
   * uscan:
     + Rewrite using object-oriented code.  MR: !28
       - This adds a new dependency on libmoo-perl for uscan (Recommended).
+    + Optimize code
+      - Set FTP passive mode in a trigger
 
  -- Mattia Rizzolo <mattia@debian.org>  Mon, 03 Sep 2018 22:42:37 +0200
 
